# simd-practice

./: .gitignore  README.md
mat-mul/: CMakeLists.txt  README.md  gbench.cpp  gtest.cpp  init.cpp  mat-mul.cpp  mat-mul.h  test.cpp  transpose.cpp
matrix-transpose/: CMakeLists.txt  README.md  gbench.cpp  gtest.cpp  init.cpp  matrix-transpose.cpp  matrix-transpose.h  transpose.cpp
